--- a/about.css
+++ b/about.css
@@ -82,13 +82,11 @@
   margin-top: 10px;
 }
 
-/* SECTION TITLE */
 .section-title {
   font-weight: 700;
   color: #1A73E8;
 }
 
-/* MISSION & VISION */
 .mission-vision {
   background: #f6f9ff;
 }
@@ -104,7 +102,6 @@
   margin-bottom: 10px;
 }
 
-/* WHY CHOOSE US */
 .icon-box {
   border-radius: 12px;
   background: white;
@@ -115,13 +112,13 @@
   color: #1A73E8;
 }
 
-/* FULL WIDTH IMAGE */
 .full-img img {
   width: 80%;
-  height: 400px;
+  height: auto;
   object-fit: cover;
   margin: auto;
-    display: block;
+  display: block;
+  margin-bottom: 2px;
     
 
 }
