--- a/adminprofile.css
+++ b/adminprofile.css
@@ -3,13 +3,11 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-/* PAGE TITLE */
 .page-title {
   font-weight: 700;
   color: #1A73E8;
 }
 
-/* PROFILE CARD */
 .profile-card {
   background: white;
   padding: 25px;
@@ -25,7 +23,6 @@ body {
   border: 4px solid #e5e7eb;
 }
 
-/* INFO CARD */
 .info-card,
 .password-card {
   background: white;
@@ -33,7 +30,6 @@ body {
   box-shadow: 0 8px 20px rgba(0,0,0,0.08);
 }
 
-/* SECTION TITLE */
 .section-title {
   font-weight: 700;
 }
@@ -46,6 +42,12 @@ body {
     height: auto;
 }
 
+.navbar-toggler{
+    color: #2b2b2b;
+    border-color: #2b2b2b;
+    position: absolute;
+    right: 1rem;
+}
 .navbar-collapse{
     align-items: center;
     font-weight: 700;
@@ -61,13 +63,12 @@ body {
     
 }
 
-/* INPUT STYLE */
+
 .form-control {
   border-radius: 8px;
   padding: 10px;
 }
 
-/* BUTTONS */
 .btn-primary {
   background: #1A73E8;
   border: none;
