--- a/ahome.css
+++ b/ahome.css
@@ -1,6 +1,5 @@
 body {
   background: #F5F7FA;
-  /* font-family: "Poppins", sans-serif; */
 }
 
 .admin-banner {
@@ -34,6 +33,13 @@ body {
     width: 30%;
     height: auto;
 }
+
+.navbar-toggler{
+    color: #2b2b2b;
+    border-color: #2b2b2b;
+    position: absolute;
+    right: 1rem;
+} 
 
 .navbar-collapse{
     align-items: center;
