--- a/managerooms.css
+++ b/managerooms.css
@@ -11,7 +11,12 @@ body {
     width: 30%;
     height: auto;
 }
-
+.navbar-toggler{
+    color: #2b2b2b;
+    border-color: #2b2b2b;
+    position: absolute;
+    right: 1rem;
+}
 .navbar-collapse{
     align-items: center;
     font-weight: 700;
@@ -32,7 +37,6 @@ body {
   color: #1A73E8;
 }
 
-/* CARD BOX */
 .room-card {
   background: white;
   border-radius: 12px;
@@ -45,14 +49,12 @@ body {
   transform: translateY(-6px);
 }
 
-/* ROOM IMAGE */
 .room-card img {
   width: 100%;
   height: 200px;
   object-fit: cover;
 }
 
-/* INFO AREA */
 .room-info {
   padding: 16px;
 }
@@ -73,14 +75,12 @@ body {
   color: #606F7B;
 }
 
-/* BUTTON BOX */
 .btn-box {
   display: flex;
   gap: 8px;
   margin-top: 12px;
 }
 
-/* EDIT BUTTON */
 .btn-edit {
   background: #1A73E8;
   color: white;
@@ -93,7 +93,6 @@ body {
   background: #0F5FCC;
 }
 
-/* DELETE BUTTON */
 .btn-delete {
   background: #E63946;
   color: white;
